[gd_scene load_steps=17 format=3 uid="uid://new_player_animated"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/characters/player/idle.png" id="2"]
[ext_resource type="Texture2D" path="res://assets/characters/player/walk1.png" id="3"]
[ext_resource type="Texture2D" path="res://assets/characters/player/walk2.png" id="4"]
[ext_resource type="Texture2D" path="res://assets/characters/player/walk3.png" id="5"]
[ext_resource type="Texture2D" path="res://assets/characters/player/jump.png" id="6"]
[ext_resource type="Texture2D" path="res://assets/characters/player/fall.png" id="7"]
[ext_resource type="Texture2D" path="res://assets/characters/player/run1.png" id="8"]
[ext_resource type="Texture2D" path="res://assets/characters/player/run2.png" id="9"]
[ext_resource type="AudioStream" path="res://assets/jump.wav" id="10"]
[ext_resource type="AudioStream" path="res://assets/enemy_hit.wav" id="11"]

[sub_resource type="SpriteFrames" id="SpriteFrames_player_new"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3")
}, {
"duration": 1.0,
"texture": ExtResource("4")
}, {
"duration": 1.0,
"texture": ExtResource("5")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8")
}, {
"duration": 1.0,
"texture": ExtResource("9")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7")
}],
"loop": false,
"name": &"fall",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_player"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hurtbox"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jump"]
direction = Vector3(0, -1, 0)
initial_velocity_min = 30.0
initial_velocity_max = 50.0
gravity = Vector3(0, 98, 0)
scale_min = 0.5
scale_max = 1.5

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_landing"]
direction = Vector3(0, -1, 0)
spread = 45.0
initial_velocity_min = 50.0
initial_velocity_max = 100.0
gravity = Vector3(0, 200, 0)
scale_min = 0.3
scale_max = 1.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_player_new")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_player")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
limit_left = -200
limit_top = -100
limit_right = 1400
limit_bottom = 500
position_smoothing_enabled = true
position_smoothing_speed = 3.0

[node name="JumpAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10")
volume_db = -10.0

[node name="HitAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11")
volume_db = -5.0

[node name="FootstepAudio" type="AudioStreamPlayer" parent="."]
volume_db = -15.0

[node name="Hurtbox" type="Area2D" parent="."]

[node name="HurtboxCollision" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_hurtbox")

[node name="JumpParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, 8)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_jump")
lifetime = 0.5
one_shot = true

[node name="LandingParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, 8)
emitting = false
amount = 30
process_material = SubResource("ParticleProcessMaterial_landing")
lifetime = 0.8
one_shot = true

[node name="FootstepTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = false

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="FootstepTimer" to="." method="_on_footstep_timer_timeout"] 